Implementing a slider in the homepage to introduce the app.

--- a/templates/admin/manageUsers.html.twig
+++ b/templates/admin/manageUsers.html.twig
@@ -16,68 +16,59 @@
     </header>
 
     <!-- Page Content -->
-    <section class="py-5">
-        <div class="container">
-            <div class="row header-dashboard py-5">
-                <div class="col-md-12 text-center dashboard_menu">
-                    <h2>Users</h2>
-                    <a href="{{ path('admin') }}" class="btn btn-info btn-dashboard">Dashboard</a>
-                    <a href="{{ path('manageComments') }}" class="btn btn-info btn-dashboard">Reported comments</a>
-                    <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create an article</a>
-                    <a href="{{ path('pendingArticles') }}" class="btn btn-info btn-dashboard">Manage pending articles</a>
+        <section class="py-5">
+            <div class="container">
+                <div class="row header-dashboard py-5">
+                    <div class="col-md-12 text-center dashboard_menu">
+                        <h2>Manage users</h2>
+                        <a href="{{ path('admin') }}" class="btn btn-info btn-dashboard">Dashboard</a>
+                        <a href="{{ path('manageComments') }}" class="btn btn-info btn-dashboard">Manage comments</a>
+                        <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create an article</a>
+                        <a href="{{ path('pendingArticles') }}" class="btn btn-info btn-dashboard">Manage pending articles</a>
+                    </div>
                 </div>
+
+                <section class="ftco-section">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="case">
+                                    <div class="row">
+                                        {% for user in users %}
+                                            {% if user.roles[0] == 'ROLE_USER' %}
+                                                <div class="col-xl-4 col-lg-6 col-md-12 card py-5 card-dashboard">
+                                                    <div class="text w-100 pl-md-3 text-center">
+                                                        <p class="text-center">Firstname</p>
+                                                        <h3 class="text-center">
+                                                            {{ user.firstname }}
+                                                        </h3>
+                                                        <p class="text-center">Lastname</p>
+                                                        <h3 class="text-center">
+                                                            {{ user.lastname }}
+                                                        </h3>
+                                                        <p class="text-center">Email</p>
+                                                        <h3 class="text-center">
+                                                            {{ user.email }}
+                                                        </h3>
+                                                        <p class="text-center">Creation date</p>
+                                                        <h3 class="text-center">
+                                                            {{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}
+                                                        </h3>
+                                                        <br>
+                                                        <p class="text-center">Available options</p>
+                                                        <div class="d-flex justify-content-center">
+                                                            <a href="{{ path('delete_user', {'id': user.id }) }}" class="btn btn-danger">Delete</a>                                       </div>
+                                                    </div>
+                                                </div>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
-        </div>
-
-        <div class="container">
-
-            <table class="table table-hover">
-                <thead class="thead-dark">
-                <tr>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                </tbody>
-            </table>
-
-            <table class="table table-hover">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Firstname</th>
-                        <th scope="col">Lastname</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">CreatedAt</th>
-                        <th scope="col">Delete user</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {% for user in users %}
-                    {% if user.roles[0] == 'ROLE_USER' %}
-                    <tr>
-                        <td>{{ user.firstname }}</td>
-                        <td>{{ user.lastname }}</td>
-                        <td>{{ user.email }}</td>
-                        <td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                        <td> <a href="{{ path('delete_user', {'id': user.id }) }}" class="btn btn-danger">Delete</a></td>
-                    </tr>
-                    {% endif %}
-                {% else %}
-                    <tr>
-                        <td colspan="6">no records found</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-
-        </div>
-    </section>
+        </section>
 
 {% endblock %}
