--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,6 +11,7 @@
                     <h1 class="font-weight-light">ALGERdiscoveRIE</h1>
                     <p class="lead">L'application qui va vous instruire et vous faire voyager</p>
                 </div>
+
             </div>
         </div>
     </header>
@@ -18,12 +19,95 @@
     <!-- Page Content -->
     <section class="py-5">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 mb100 wow">
-                    <h2 class="section-heading">Bienvenue sur ALGERdiscoveRIE</h2>
-                    <h3 class="section-subheading secondary-font">Venez voyager avec nous en Algérie.</h3>
+            <h2 class="section-heading text-center py-4">
+                Welcome to ALGERdiscoveRIE ! <br>
+                <small class="text-muted">The purpose of this website is to make you discover the wonderful country of Algeria through its wide variety of cultures,
+                    its magnificent landscapes, and its amazing and very welcoming inhabitants.</small>
+            </h2>
+
+            <!--Carousel Wrapper-->
+            <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
+                <!--Indicators-->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-2" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-2" data-slide-to="2"></li>
+                </ol>
+                <!--/.Indicators-->
+                <!--Slides-->
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <div class="view">
+                            <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg"
+                                 alt="First slide">
+                            <div class="mask rgba-black-light"></div>
+                        </div>
+                        <div class="carousel-caption">
+                            <h3 class="h3-responsive">Interactive map</h3>
+                            <p> Browse the map to discover the regions of Algeria and their main information.</p>
+                            <a href= "{{ path('map') }}" class="btn btn-primary">To the map</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <!--Mask color-->
+                        <div class="view">
+                            <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg"
+                                 alt="Second slide">
+                            <div class="mask rgba-black-strong"></div>
+                        </div>
+                        <div class="carousel-caption">
+                            <h3 class="h3-responsive">Article list</h3>
+                            <p> Check the articles related to each regions classified by categories.</p>
+                            <a href= "{{ path('article') }}" class="btn btn-primary">To the articles</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <!--Mask color-->
+                        <div class="view">
+                            <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg"
+                                 alt="Third slide">
+                            <div class="mask rgba-black-slight"></div>
+                        </div>
+                        <div class="carousel-caption">
+                            <h3 class="h3-responsive">Bring your contribution</h3>
+                            <p>
+                                You can contribute to the website by signing up, logging in and creating an article,
+                                reacting to articles by commenting them and liking them if you enjoy them.
+                            </p>
+                            <a href= "{{ path('registration') }}" class="btn btn-primary">Sign Up</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <!--Mask color-->
+                        <div class="view">
+                            <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg"
+                                 alt="Fourth slide">
+                            <div class="mask rgba-black-slight"></div>
+                        </div>
+                        <div class="carousel-caption">
+                            <h3 class="h3-responsive">Contact us</h3>
+                            <p>
+                                If you have any question or suggestion, please don't hesitate to contact us.
+                                We always keep improving the website to provide you the best experience.
+                            </p>
+                            <a href= "{{ path('contact') }}" class="btn btn-primary">Contact us</a>
+                        </div>
+                    </div>
                 </div>
+                <!--/.Slides-->
+                <!--Controls-->
+                <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+                <!--/.Controls-->
             </div>
+            <!--/.Carousel Wrapper-->
+
         </div>
     </section>
 
