--- a/templates/map/map.html.twig
+++ b/templates/map/map.html.twig
@@ -20,7 +20,7 @@
         <div class="container-fluid">
             <div class="card">
                 <div class="row map-container">
-                    <div class="col-md-6 col-sm-12">
+                    <div class="col-md-6">
                         <!-- Map -->
                         <div id="map-within-card-2" style="height: 800px;">
                             <div id="chartdiv" class="map"></div>
@@ -28,7 +28,7 @@
                         <!-- Map -->
                     </div>
 
-                    <div class="col-10 col-md-4 col-sm-12 mx-auto align-self-center py-4">
+                    <div class="col-10 col-md-4 mx-auto align-self-center py-4">
                         <div id="region_info" ></div>
                     </div>
                 </div>
