--- a/templates/admin/manageComments.html.twig
+++ b/templates/admin/manageComments.html.twig
@@ -15,55 +15,63 @@
         </div>
     </header>
 
-    <!-- Page Content -->
     <section class="py-5">
         <div class="container">
             <div class="row header-dashboard py-5">
                 <div class="col-md-12 text-center dashboard_menu">
-                    <h2>Reported comments</h2>
+                    <h2>Comments</h2>
                     <a href="{{ path('admin') }}" class="btn btn-info btn-dashboard">Dashboard</a>
                     <a href="{{ path('manageUsers') }}" class="btn btn-info btn-dashboard">User list</a>
-                    <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create a post</a>
+                    <a href="{{ path('article_new') }}" class="btn btn-info btn-dashboard">Create an article</a>
                     <a href="{{ path('pendingArticles') }}" class="btn btn-info btn-dashboard">Manage pending articles</a>
                 </div>
             </div>
 
-            <div class="container">
-
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Firstname</th>
-                        <th>Content</th>
-                        <th>Article commented</th>
-                        <th>CreatedAt</th>
-                        <th>Number of reports</th>
-                        <th>Unreport comment</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for comment in comments %}
-                        {% if(comment.reported > 0) %}
-                            <tr>
-                                <td>{{ comment.username.firstname }}</td>
-                                <td>{{ comment.content }}</td>
-                                <td>{{ comment.article.title }}</td>
-                                <td>{{ comment.createdAt ? comment.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                                <td>{{ comment.reported}}</td>
-                                <td>
-                                    <a href="{{ path('unreport_comment', {'id': comment.id}) }}" class="btn btn-success btn-sm mx-2">Unreport</a>
-                                    <a href="{{ path('delete_comment', {'id': comment.id}) }}" class="btn btn-danger btn-sm mx-2">Delete</a>
-                                </td>
-                            </tr>
-                        {% endif %}
-                    {% else %}
-                        <tr>
-                            <td colspan="6">no records found</td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+            <section class="ftco-section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="case">
+                                <div class="row">
+                                    {% for comment in comments %}
+                                        {% if(comment.reported > 0) %}
+                                            <div class="col-xl-4 col-lg-6 col-md-12 card py-5 card-dashboard">
+                                                <div class="text w-100 pl-md-3 text-center">
+                                                    <p class="text-center">Author</p>
+                                                    <h3 class="text-center">
+                                                        {{ comment.username.firstname }}
+                                                    </h3>
+                                                    <p class="text-center">Article commented</p>
+                                                    <h3 class="text-center">
+                                                        {{ comment.article.title }}
+                                                    </h3>
+                                                    <p class="text-center">Content</p>
+                                                    <h3 class="text-center">
+                                                        {{ comment.content }}
+                                                    </h3>
+                                                    <p class="text-center">Creation date</p>
+                                                    <h3 class="text-center">
+                                                        {{ comment.createdAt ? comment.createdAt|date('Y-m-d H:i:s') : '' }}
+                                                    </h3>
+                                                    <p class="text-center">Number of reports</p>
+                                                    <h3 class="text-center">
+                                                        {{ comment.reported }}
+                                                    </h3>
+                                                    <br>
+                                                    <p class="text-center">Available options</p>
+                                                    <div class="d-flex justify-content-center">
+                                                        <a href="{{ path('unreport_comment', {'id': comment.id}) }}" class="btn btn-success btn-sm mx-2">Unreport</a>
+                                                        <a href="{{ path('delete_comment', {'id': comment.id}) }}" class="btn btn-danger btn-sm mx-2">Delete</a>                                        </div>
+                                                </div>
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </section>
 
