--- a/templates/map/map.html.twig
+++ b/templates/map/map.html.twig
@@ -30,6 +30,7 @@
 
                     <div class="col-10 col-md-4 mx-auto align-self-center py-4">
                         <div id="region_info" ></div>
+                        <a href= "{{ path('article') }}" class="btn btn-dark my-3">More about Algeria's regions</a>
                     </div>
                 </div>
             </div>
