implementing pagination and fixing some issues with forms.

--- a/public/css/myStyle.css
+++ b/public/css/myStyle.css
@@ -111,6 +111,12 @@ path:hover {
     background-color: lightgrey;
 }
 
+/* PAGING */
+.pagination {
+    justify-content: center;
+    margin-top: 1em;
+}
+
 /* FOOTER */
 footer a {
     color: white;
