--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -43,14 +43,21 @@
                     <span class="js-likes">{{ article.likes | length }}</span>
                     <span class="js-label">Like</span>
                 </a>
-
-                <a href="{{ path('article') }}" class="btn btn-primary my-3">&laquo; Back to chapters list</a>
+                <div>
+                    <a href="{{ path('article') }}" class="btn btn-primary my-3">&laquo; Back to chapters list</a>
+                </div>
 
             </div>
 
             <section id="comment">
 
                 <h3>{{ article.comments | length }} Comments :</h3>
+
+                {% for message in app.flashes('notice') %}
+                    <div class="my-4">
+                        <span class = "col-lg-8 col-md-10 mx-auto alert alert-danger text-center mt-3 flash-notice"> {{ message }} </span>
+                    </div>
+                {% endfor %}
                 {% for comment in article.comments %}
 
                     <div class="container comment-zone p-4 mx-auto bg-light">
@@ -63,12 +70,7 @@
                                 <div class="row">
                                     <p class="col-12 p-0 mt-0 mx-2 mb-0">{{ comment.content | raw }}</p>
                                     {% if is_granted('ROLE_USER') %}
-                                    <div class="row">
                                         <a href="{{ path('report_comment', {'id': comment.id}) }}" class="btn btn-danger btn-sm mx-2">Report</a>
-                                        {% for message in app.flashes('notice') %}
-                                        <span class = "col-lg-8 col-md-10 mx-auto alert alert-danger text-center mt-3 flash-notice"> {{ message }} </span>
-                                        {% endfor %}
-                                    </div>
                                     {% endif %}
                                 </div>
                             </div>
